--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>CLUB AUTO</title>
     <link rel="stylesheet" href="/styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -97,10 +97,7 @@
                         incidunt
                         repellat iste minima, exercitationem velit vel error veniam impedit dolore nulla fugit alias quo
                         temporibus?
-                        Libero quasi, eius veniam in magnam itaque laudantium porro saepe dolorem laborum amet ut nam ab
-                        aliquid?
-                        Impedit,
-                        et.
+                        Libero quasi, eius veniam in magnam itaque laudantium porro saepe dolorem laborum amet
                     </p>
                     <br>
                     <ul><!--liste des points forts de l'entreprise-->
