--- a/vehiculeDetails.html
+++ b/vehiculeDetails.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>CLUB AUTO</title>
     <link rel="stylesheet" href="/styles/style.css">
     <!--Début import des polices google-->
@@ -20,14 +20,14 @@
         <div class="headerCtr col-9">
             <h1 class="col-3">Club auto</h1> <!--Titre du header-->
             <!--Div contenant l'adresse le téléphone et les horaires, permettant l'organisation du style au sein du header-->
-            <div class="headerLogo col-3">
+            <div class="headerLogoAdresse col-3">
                 <img src="/images/icone-adresse.png" alt="icone de l'adresse">
                 <div class="headerAdresse">
                     <h2 class="texteOrange headerFontSize">Adresse :</h2> <!--Adresse Header-->
                     <p>Avenue charles de gaulle 75000 paris</p>
                 </div>
             </div>
-            <div class="headerLogo col-3">
+            <div class="headerLogoTel col-3">
                 <img src="/images/icon-telephone.png" alt="icone du téléphone">
                 <div class="headerTel">
                     <h2 class="texteOrange headerFontSize">Téléphone :</h2><!--Téléphone Header-->
