--- a/source.html
+++ b/source.html
@@ -6,6 +6,7 @@
     </meta>
     <title>CLUB AUTO</title>
     <link rel="stylesheet" href="/styles/style.css">
+    <link rel="icon" type="image/x-icon" href="/images/check-solid.svg">
     <!--Début import des polices google-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
