--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>CLUB AUTO</title>
     <link rel="stylesheet" href="/styles/style.css">
+    <link rel="icon" type="image/x-icon" href="/images/check-solid.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Début import des polices google-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -55,8 +56,8 @@
                     <i class="fa-brands fa-twitter headerSocial-t" style="color: #ffffff;"></i>
                 </a>
             </div>
-            <button class="hamburgerMenu"><i class="fa-solid fa-bars" style="color: #6C98E1;"></i></button><!--menu burger pour les versions mobiles-->
         </div>
+        <button class="hamburgerMenu"><i class="fa-solid fa-bars" style="color: #6C98E1;"></i></button><!--menu burger pour les versions mobiles-->
     </header>
     <nav class="sourceNav"><!--barre de navigation-->
         <ul><!--liste de liens de navigation-->
